--- a/LocationProject/app/src/main/res/layout/activity_to_do.xml
+++ b/LocationProject/app/src/main/res/layout/activity_to_do.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content" />
 -->
 
+<!--
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -43,9 +44,9 @@
         android:padding="6dip" >
     </ListView>
 </LinearLayout>
+-->
 
 
-<!--
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout1"
@@ -53,6 +54,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="500dip"
+        android:layout_height="250dip" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -106,4 +113,3 @@
         android:padding="6dip" >
     </ListView>
 </LinearLayout>
--->
